Fine tuning flex-box for article/footer spacing.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="site-container">
 
 
     <header class="header-flex">
@@ -41,27 +41,29 @@
       </section>
       <div class="main-articles">
 
-        <section>
+        <section class="strategy">
           <img src="img/about-plan.png" alt="strategy">
-          <p>
             <h3>Strategy</h3> Iterative approaches to corporate strategy foster collaborative thinking to further the overall
-            value proposition. <button>Learn More</button> </p>
+            value proposition.
+            <button>Learn More</button>
         </section>
-        <section>
+        <section class="strategy">
           <img src="img/about-working.png" alt="strategy">
-          <p><h3>How We Work</h3>
-             Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-             <button>Learn More</button></p>
+            <h3>How We Work</h3>
+            Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+            <button>Learn More</button>
         </section>
-        <section>
+        <section class="strategy">
           <img src="img/about-office.png" alt="strategy">
-          <p> <h3>Places We Work</h3> Iterative approaches to corporate strategy foster collaborative thinking to further the overall
-            value proposition. <button>Learn More</button></p>
+            <h3>Places We Work</h3> Iterative approaches to corporate strategy foster collaborative thinking to further the overall
+            value proposition.
+            <button>Learn More</button>
         </section>
-        <section>
+        <section class="strategy">
           <img src="img/about-meeting.png" alt="strategy">
-          <p> <h3>Collaboration </h3>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-            proposition. <button>Learn More</button></p>
+            <h3>Collaboration </h3>Iterative approaches to corporate strategy foster collaborative thinking to further the overall
+            value proposition.
+            <button>Learn More</button>
         </section>
 
       </div>
